fix(docs): incorrect positioning on mobile due to hero overflow

--- a/docs/Blazor.Sonner.Docs/Styles/globals.css
+++ b/docs/Blazor.Sonner.Docs/Styles/globals.css
@@ -14,6 +14,11 @@
 }
 
 @layer base {
+    /* Disable double-tap zoom */
+    * {
+        touch-action: manipulation;
+    }
+
     body {
         @apply bg-white text-zinc-950 antialiased;
     }
